# gmux

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DECISIONS.md  LICENSE  PARKED.md  README.md  ROADMAP.md  book.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/gmux/: Cargo.toml
crates/gmux-browser/: Cargo.toml
crates/gmux-browser/src/: embedded.rs  lib.rs
crates/gmux-gui/: Cargo.toml
crates/gmux-gui/src/: api.rs  app.rs  atlas.rs  clipboard.rs  config.rs  daemon_client.rs  lib.rs  renderer.rs
crates/gmux-mux/: Cargo.toml
crates/gmux-mux/src/: attention.rs  ids.rs  layout.rs  lib.rs  pane.rs  persist.rs  workspace.rs
crates/gmux-mux/tests/: pane.rs  remote_pane.rs
crates/gmux-notify/: Cargo.toml
crates/gmux-notify/src/: lib.rs
crates/gmux-pipe/: Cargo.toml
crates/gmux-pipe/src/: lib.rs
crates/gmux-proto/: Cargo.toml
crates/gmux-proto/src/: lib.rs
crates/gmux-pty/: Cargo.toml  test-conpty.ps1
crates/gmux-pty/src/: lib.rs
crates/gmux-pty/tests/: spawn.rs
crates/gmux-remote/: Cargo.toml
crates/gmux-remote/src/: convert.rs  lib.rs  transport.rs
crates/gmux-server/: Cargo.toml
crates/gmux-server/src/: lib.rs  remote.rs
crates/gmux-server/tests/: daemon.rs
crates/gmux-tmux/: Cargo.toml
crates/gmux-tmux/src/: layout.rs  lib.rs  tests.rs  unescape.rs
crates/gmux-vt/: Cargo.toml
crates/gmux-vt/src/: lib.rs  osc.rs  probe_tests.rs  tests.rs
crates/gmux/src/: client.rs  crash.rs  hooks.rs  main.rs  shell_integration.rs
demos/: m12-browser.ps1  m5.ps1
docs/: SUMMARY.md  agents.md  index.md
docs/research/: README.md  cmux-product.md  conpty.md  dotnet-stack.md  m0-spikes.md  mux-architecture.md  osc-notifications.md  prior-art-gaps.md  rust-stack.md  verification.md  windows-toasts.md
scripts/: console-tests.ps1  package.ps1
spikes/: README.md  fetch-conpty.ps1
spikes/conpty_osc/: Cargo.toml  emit.ps1  run.ps1
spikes/conpty_osc/src/: main.rs
spikes/ghostty_vt/: Cargo.toml
spikes/ghostty_vt/src/: main.rs
spikes/toast/: Cargo.toml
spikes/toast/src/: main.rs
