[package]
name = "gmux-gui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
gmux-mux = { path = "../gmux-mux" }
gmux-notify = { path = "../gmux-notify" }
gmux-pipe = { path = "../gmux-pipe" }
gmux-proto = { path = "../gmux-proto" }
wgpu = "30"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
ab_glyph = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
