[package]
name = "gmux-gui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
gmux-mux = { path = "../gmux-mux" }
gmux-notify = { path = "../gmux-notify" }
gmux-pipe = { path = "../gmux-pipe" }
gmux-proto = { path = "../gmux-proto" }
wgpu = "30"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
ab_glyph = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Clipboard copy/paste (CF_UNICODETEXT via user32/kernel32). Same major as gmux-notify's dep.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
] }
# M12: only pulled in with `--features browser`; keeps WebView2/COM out of the default graph.
gmux-browser = { path = "../gmux-browser", optional = true }

[features]
# Off by default: the WebView2 browser pane is lower priority than terminal correctness (ROADMAP M12).
default = []
browser = ["dep:gmux-browser"]
