[package]
name = "gmux-notify"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
windows = { version = "0.62", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Foundation",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
