[package]
name = "gmux-pipe"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
