[package]
name = "gmux-pty"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_UI_WindowsAndMessaging",
] }
