[package]
name = "gmux-remote"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
gmux-mux = { path = "../gmux-mux" }
gmux-tmux = { path = "../gmux-tmux" }
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
] }
