[package]
name = "gmux"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "gmux"
path = "src/main.rs"

[dependencies]
gmux-gui = { path = "../gmux-gui" }
gmux-pipe = { path = "../gmux-pipe" }
gmux-proto = { path = "../gmux-proto" }
gmux-server = { path = "../gmux-server" }
serde_json = "1"
toml_edit = "0.22"
