[package]
name = "conpty_osc"
version = "0.0.0"
edition = "2021"
publish = false

# Detach from any parent workspace — this spike is standalone.
[workspace]

[[bin]]
name = "conpty_osc"
path = "src/main.rs"

[dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
] }
